feat: tailwind setting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "types": ["@types"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "withTwin.js"],
   "exclude": ["node_modules"]
 }
