--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "twin.macro": "^3.1.0",
     "typescript": "4.9.4"
   },
