--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "twin.macro": "^3.1.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
