--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/react-dom": "18.0.10",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
-    "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
@@ -29,12 +28,16 @@
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "twin.macro": "^3.1.0",
-    "typescript": "4.9.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.5"
   }
 }
