--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "recoil": "^0.7.6",
     "twin.macro": "^3.1.0",
     "yup": "^0.32.11"
   },
