--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
     "eslint-config-next": "13.1.2",
