--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "twin.macro": "^3.1.0",
     "yup": "^0.32.11"
   },
