--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.3",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
+    "browser-image-compression": "^2.0.2",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
