--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.3.3",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
@@ -33,6 +34,7 @@
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
     "twin.macro": "^3.1.0",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
