--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-quill": "^2.0.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
     "twin.macro": "^3.1.0",
     "uuid": "^9.0.0",
