--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.21.4",
     "@babel/plugin-syntax-typescript": "^7.20.0",
     "@babel/preset-react": "^7.18.6",
     "@emotion/css": "^11.10.5",
