--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3002",
-    "build": "next build",
+    "build": "GENERATE_SOURCEMAP=false next build",
     "start": "next start",
     "lint": "next lint"
   },
