--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "GENERATE_SOURCEMAP=false next build",
     "start": "next start",
     "lint": "next lint"
@@ -26,6 +26,7 @@
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
     "browser-image-compression": "^2.0.2",
+    "cookies-next": "^2.1.1",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
